--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
                         <div>
                             <p>Compatible</p>
-                            <p>Android</p>
+                            <p>Apple</p>
                         </div>
                         <div>
                             <p>Bluetooth</p>
